Add database configuration with Prisma and implement NextAuth authentication

--- a/.cursor-task.md
+++ b/.cursor-task.md
@@ -34,13 +34,13 @@ This application aims to streamline daily operations for an animal feed store, c
    - Install lucide-react for icon set
    - Set up Zustand for global state management  
 
-2. [ ] **Database Configuration**  
+2. [x] **Database Configuration**  
    - Create supabase or PostgreSQL schema with tables:  
      - Products (id, name, category, price, stock, unit, supplier_id)  
      - Transactions (id, items, total, payment_method, timestamp)   
    - Implement Prisma ORM with seed data for testing  
 
-3. [ ] **Authentication System**  
+3. [x] **Authentication System**  
    - Implement NextAuth with role-based access control  
    - Create 3 user roles: Manager/Owner, Cashier.
    - Configure 2FA for Manager/Owner accounts using TOTP  
