Implement transaction flow - cart system, split payment, currency IDR, and stock validation

--- a/.cursor-task.md
+++ b/.cursor-task.md
@@ -56,7 +56,7 @@ This application aims to streamline daily operations for an animal feed store, c
    - Implement fuzzy search with Fuse.js for product names/categories  
    - Add keyboard shortcuts for quick item addition (e.g., F1 for barcode scanner)  
 
-2. [ ] **Transaction Flow**  
+2. [x] **Transaction Flow**  
    - Build cart system with quantity adjustments  
    - Implement multi-payment split functionality 
    - Use currency IDR (Indonesia Rupiah) for transaction
