Add receipt generation feature with PDF download

--- a/.cursor-task.md
+++ b/.cursor-task.md
@@ -62,7 +62,7 @@ This application aims to streamline daily operations for an animal feed store, c
    - Use currency IDR (Indonesia Rupiah) for transaction
    - Add real-time stock validation during checkout  
 
-3. [ ] **Receipt Generation**  
+3. [x] **Receipt Generation**  
    - Design printable receipt template with company logo  
    - Implement PDF/email receipt options using react-pdf  
 
