Refactor dan perbaikan: 1) Menghapus file auth.config.ts dan middleware.ts, 2) Memperbarui next.config.mjs untuk menangani modul Server-Side, 3) Menambahkan model PasswordReset di schema.prisma, 4) Memperbaiki logika middleware untuk akses berbasis peran, 5) Memperbarui tampilan dan fungsionalitas di halaman login dan POS, serta 6) Menambahkan fitur baru di beberapa komponen UI.

--- a/.cursor-task.md
+++ b/.cursor-task.md
@@ -138,13 +138,8 @@ This application aims to streamline daily operations for an animal feed store, c
 
 ---
 
-## 7. **Deployment & Documentation**  
-1. [ ] **Infrastructure Setup**  
-   - Configure Docker containers for web/database  
-   - Set up CI/CD pipeline with GitHub Actions  
-   - Implement zero-downtime deployment strategy  
-
-2. [ ] **User Documentation**  
+## 7. **Documentation**    
+1. [ ] **User Documentation**  
    - Create interactive product tour with Intro.js  
    - Build searchable knowledge base  
    - Record video tutorials for key workflows  
