Perbarui fitur Dashboard dan Low Stock dengan penambahan analitik dan perbaikan UI: 1) Tambahkan visualisasi data penjualan dengan grafik dan filter waktu, 2) Implementasikan sistem notifikasi stok dengan pembaruan otomatis, 3) Perbarui komponen untuk mendukung input angka yang lebih baik dan penghapusan tombol spin pada input number, 4) Tambahkan fungsionalitas untuk menyimpan dan mengelola cache stok rendah.

--- a/.cursor-task.md
+++ b/.cursor-task.md
@@ -81,15 +81,15 @@ This application aims to streamline daily operations for an animal feed store, c
 ## 3. **Dashboard Features**  
 
 ### **3.1 Sales Analytics**  
-1. [ ] **Data Visualization**  
-   - Implement Recharts with time filters (day/week/month)  
-   - Create comparative sales charts by product category  
-   - Build heatmap of peak transaction times  
+1. [x] **Data Visualization**  
+   - [x] Implement Recharts with time filters (day/week/month)  
+   - [x] Create comparative sales charts by product category  
+   - [x] Build heatmap of peak transaction times  
 
 2. [ ] **Reporting System**  
-   - Add custom report builder with drag-n-drop fields  
-   - Implement scheduled PDF report generation  
-   - Create export to Excel/Google Sheets functionality  
+   - [ ] Add custom report builder with drag-n-drop fields  
+   - [ ] Implement scheduled PDF report generation  
+   - [ ] Create export to Excel/Google Sheets functionality  
 
 ### **3.2 Inventory Management**  
 1. [ ] **Stock Tracking**  
@@ -154,6 +154,23 @@ This application aims to streamline daily operations for an animal feed store, c
 2. [ ] **Advanced Features**  
    - Predictive inventory AI using historical data  
    - IoT integration for warehouse monitoring  
+
+3. [ ] **Dashboard Enhancement**
+   - [ ] **Analisis Profitabilitas**
+     - Perhitungan margin keuntungan per produk dan kategori
+     - Analisis ROI pada stok yang dibeli
+     - Visualisasi tren keuntungan per kategori produk
+   
+   - [ ] **Prediksi dan Peramalan**
+     - Proyeksi stok habis berdasarkan tren penjualan
+     - Perkiraan penjualan dan keuntungan mendatang
+     - Alert otomatis untuk produk dengan proyeksi stok habis dalam X hari
+   
+   - [ ] **Perhitungan HPP (Harga Pokok Penjualan)**
+     - Modul input komponen biaya untuk setiap produk (harga beli, biaya pengiriman, dll)
+     - Perhitungan otomatis HPP berdasarkan metode FIFO/LIFO/rata-rata
+     - Dashboard analisis margin keuntungan berbasis HPP
+     - Rekomendasi penyesuaian harga jual berdasarkan target margin
 
 ---
 
